--- a/scss/style.css
+++ b/scss/style.css
@@ -1463,7 +1463,7 @@ Portfolio Gallery
         height: 100%;
         position: absolute;
         width: 100%;
-        background: #B2D430;
+        background: #2C343B;
         z-index: 2;
         -webkit-transition: all 0.3s ease-out;
         -moz-transition: all 0.3s ease-out;
@@ -1477,39 +1477,36 @@ Portfolio Gallery
           /* line 1416, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
           .gallery .galleryItem figure .galleryItem-overlay {
             display: none; } }
-      /* line 1437, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+      /* line 1436, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
       .gallery .galleryItem figure img {
         -webkit-filter: grayscale(40%);
         filter: grayscale(40%);
         position: relative;
         width: 100%;
         margin: 0;
-        -webkit-transition: all 1s ease 0s;
-        -moz-transition: all 1s ease 0s;
-        -o-transition: all 1s ease 0s;
-        transition: all 1s ease 0s; }
+        -webkit-transition: all 0.3s ease 0s;
+        -moz-transition: all 0.3s ease 0s;
+        -o-transition: all 0.3s ease 0s;
+        transition: all 0.3s ease 0s; }
         @media only screen and (min-width: 640px) {
-          /* line 1437, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+          /* line 1436, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
           .gallery .galleryItem figure img {
             -webkit-filter: none;
             filter: none;
-            -webkit-transition: all 1s ease 0s;
-            -moz-transition: all 1s ease 0s;
-            -o-transition: all 1s ease 0s;
-            transition: all 1s ease 0s;
             width: 70%;
             margin: calc(30% / 2); } }
-      /* line 1459, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+      /* line 1458, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
       .gallery .galleryItem figure figcaption {
-        color: black;
+        color: white;
         opacity: 0;
         -webkit-transition: all 1s ease 0s;
         -moz-transition: all 1s ease 0s;
         -o-transition: all 1s ease 0s;
         transition: all 1s ease 0s; }
         @media only screen and (min-width: 640px) {
-          /* line 1459, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
+          /* line 1458, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
           .gallery .galleryItem figure figcaption {
+            color: black;
             opacity: 1;
             display: block;
             text-shadow: none;
@@ -1518,7 +1515,7 @@ Portfolio Gallery
     .gallery .galleryItem figure:hover .galleryItem-overlay {
       -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=80)";
       filter: alpha(opacity=80);
-      opacity: .5; }
+      opacity: .75; }
     /* line 1484, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
     .gallery .galleryItem figure:hover img {
       -webkit-transform: scale(1.4235);
@@ -1540,8 +1537,8 @@ Portfolio Gallery
     /* line 1505, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
     .gallery .galleryItem figure:hover figcaption {
       opacity: 1;
-      font-weight: 500;
-      font-size: 20px; }
+      font-weight: 100;
+      font-size: .8em; }
       @media only screen and (min-width: 640px) {
         /* line 1505, /Users/paulopamplona/Desktop/00_websites/pepe_ROOT/scss/style.scss */
         .gallery .galleryItem figure:hover figcaption {
