--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1387,7 +1387,7 @@ main > p > a {
 
 /* -------------------------------- 
 
-Portfolio Gallery
+Gallery
 
 -------------------------------- */
 
@@ -1447,10 +1447,6 @@ Portfolio Gallery
                 @include MQ(SM) {
                     -webkit-filter: none;
                     filter: none;
-//                    -webkit-transition: all 1s ease 0s;
-//                    -moz-transition: all 1s ease 0s;
-//                    -o-transition: all 1s ease 0s;
-//                    transition: all 1s ease 0s;
                     width: 70%;
                     margin: calc(30% / 2);
                 }
@@ -1575,6 +1571,206 @@ Portfolio Gallery
         }    
     }
 }
+
+
+// Highlight Box
+
+#overlay {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top:0;
+    left:0;
+    background-color: rgb(0,0,0);
+    z-index: 900;
+    display: none;
+}
+
+article[id^="galleryItemContent"] {
+    background-color: $color-black;
+    position: fixed;
+    top:10%;
+    width:100%;
+    height: auto;
+    z-index: 901;
+    display: none;
+    margin: auto 0;
+    
+    @include MQ(SM) {
+        width: 90%;
+        margin: auto auto auto 5%;
+    }
+    
+    @include MQ(M) {
+        margin: auto;
+        top:0;
+        height: 100%;
+        width: 700px;
+        clear: both;
+        right: calc(50% - 350px);
+    }
+        
+    .close {
+        cursor: pointer;
+        position: absolute;
+        top:0;
+        right: 0;
+        text-decoration: none;
+        background-color: black;
+        padding: 1.5px 8px;
+        width: 1.5em;
+        height: 1.5em;
+        display: block;
+        font-weight: 400;
+        color:white;
+        opacity: .8;
+        line-height: 1;  
+        z-index: 902;
+        
+        @include MQ(M) {
+            clear: right;
+            position: relative;
+            float: right;
+        }
+    }
+    
+    
+    figure {
+        width: 100%;
+        margin-bottom: 0;
+        
+        @include MQ(M) {
+            background: green;
+            width: 100%; 
+        }
+        
+        img {
+            border-bottom: 1px solid black;
+            @include MQ(M) {
+                width: 100%;
+                float: right;
+                border: none;
+                margin-top: 4em;
+                right: 0;
+                margin-bottom: 2em;
+            }
+        }
+        figcaption {
+            color: $color-white;
+            margin: 1.5em;
+            margin-bottom: 0;
+            font-weight: 600;
+            letter-spacing: 1px;
+            
+            @include MQ(M) {
+                margin: 0;
+                width:  100%;
+                font-size: 2em;
+                z-index: 995;
+                position: absolute;
+                margin-top: 1em;
+                top: 0;
+                text-align: center;
+            }
+        }
+    }
+    
+    p {
+        color: $color-white;
+        margin: 1.5em;
+        margin-top: 0;
+        padding: 0;
+        letter-spacing: 1px;
+        line-height: 115%;
+        
+        @include MQ(M) {
+            padding: 0;
+            line-height: 140%;
+            width: 42.5%;
+            margin: 0 2.5% auto 5%;
+            float: left;
+            font-size: 1.1em;
+        }
+    }
+    
+    p:first-of-type{
+            padding-top: 0;
+    }
+    
+    p:last-of-type {
+        @include MQ(M) {
+            margin: 0 5% auto 2.5%;
+            clear: right;
+            float: right;
+        }
+    }
+    
+    a[href^="http"] {
+        text-decoration: none; 
+        text-align: center;
+        display: block;
+        width: 25%;
+        color: $color-white;
+		padding: 1em .3em;
+        margin: 0 auto 1.5em auto;
+        background-color: rgba(#ccc, .3);
+        border: solid 2px rgba($color-blue, 1);
+		font-size: 1.5rem;
+		font-weight: 500;
+		letter-spacing: 4px;
+		text-transform: uppercase;
+        transition: all 2s;
+        line-height: 50%;
+        
+		.no-touch &:hover, .no-touch &:focus {
+            box-shadow: inset 20em 0 .25px 0 rgba($color-blue, 1);            
+		}
+        
+        @include MQ(M) {
+            clear: right;
+            float: left;
+            transition: all .5s;
+            margin: 2.5% 12.5%;
+        }   
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* -------------------------------- 
 
