--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1572,8 +1572,11 @@ Gallery
     }
 }
 
+/* -------------------------------- 
 
-// Highlight Box
+Highlight Box
+
+-------------------------------- */
 
 #overlay {
     width: 100%;
