--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1696,8 +1696,11 @@ article[id^="galleryItemContent"] {
         }
     }
     
+    
     p:first-of-type{
-            padding-top: 0;
+        //padding-top: 0;
+        //top:0;
+        //margin-top: 0em;
     }
     
     p:last-of-type {
